--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,21 @@
       background-size: cover;
       text-decoration: none;
       font-family: Verdana, sans-serif;
+      animation: transitionIn 0.75s;
       
     }
+
+    @keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotateX(-20deg);
+    }
+
+    to {
+        opacity: 1;
+        transform: rotateX(0);
+    }
+}
   </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
